force-app/main/default/objects/Mobile_Orders__c/Mobile_Orders__c.object-meta.xml
<CustomObject>
    <description>This object is giving the discreption of generated mobile orders in the mobile stores</description>
    <label>Mobile Orders</label>
    <nameField>
        <label>Mobile Orders</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobile Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>