force-app/main/default/objects/Mobile_Orders__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mobile Orders</relationshipLabel>
    <relationshipName>Mobile_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>