force-app/main/default/objects/Mobile_Orders__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mobile Orders</relationshipLabel>
    <relationshipName>Mobile_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>