force-app/main/default/objects/Mobile_Orders__c/fields/Mobile_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Order_Number__c</fullName>
    <displayFormat>MO-{0000}</displayFormat>
    <label>Mobile Order Number</label>
    <type>AutoNumber</type>
</CustomField>