force-app/main/default/objects/Mobile_Orders__c/fields/Order_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Order_Expiry__c</fullName>
    <label>Order Expiry</label>
    <type>Date</type>
</CustomField>