force-app/main/default/objects/Mobile_Orders__c/fields/Sum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sum_Amount__c</fullName>
    <label>Sum Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>