force-app/main/default/objects/Mobile_Orders__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <label>Website</label>
    <type>Email</type>
</CustomField>