force-app/main/default/objects/Mobile_Orders__c/validationRules/Order_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Date</fullName>
    <active>true</active>
    <description>Order date should be future date not past</description>
    <errorConditionFormula>Date__c  &gt;  TODAY()</errorConditionFormula>
    <errorMessage>Order date should be future date not past</errorMessage>
</ValidationRule>