force-app/main/default/objects/Mobile_Orders__c/validationRules/Total_amount_with_Delivered_stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_amount_with_Delivered_stage</fullName>
    <active>true</active>
    <description>Total amount cannot be zero if the stage is delivered</description>
    <errorConditionFormula>AND(( ISPICKVAL(Status__c , &apos;Completed&apos;)) ,  ISBLANK( Total_Amount__c ))</errorConditionFormula>
    <errorDisplayField>Total_Amount__c</errorDisplayField>
    <errorMessage>Total amount cannot be blank</errorMessage>
</ValidationRule>