force-app/main/default/objects/Mobile_Orders__c/listViews/Mobile_Orders.listView-meta.xml
<ListView>
    <fullName>Mobile_Orders</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mobile Orders</label>
</ListView>